[package]
name = "tggh_bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
dotenv = "0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.40.0", features = ["full"] }
warp = "0.3.7"
